# mcp-server-kontomanager

./: LICENSE  README.md  pyproject.toml
src/: server.py
src/mcp_server_kontomanager/: client.py  models.py  settings.py
